@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-06-28T00:55:09Z",
-  "count" : 15,
+  "timestamp" : "2023-07-11T08:11:41Z",
+  "count" : 14,
   "count_minmax" : [ 1, 15 ],
-  "count_decinc" : [ -0, +15 ],
+  "count_decinc" : [ -1, +15 ],
   "uniques" : 10,
   "uniques_minmax" : [ 1, 10 ],
   "uniques_decinc" : [ -0, +10 ]
