@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-07-11T00:45:57Z",
+  "timestamp" : "2023-07-11T08:11:41Z",
   "count_outdated" : 4728,
   "uniques_outdated" : 1348,
-  "count" : 4796,
-  "uniques" : 1390,
+  "count" : 4816,
+  "uniques" : 1402,
   "clones" : [
     {
       "timestamp": "2023-06-27T00:00:00Z",
-      "count": 15,
+      "count": 14,
       "count_minmax": [ 1, 15 ],
-      "count_decinc": [ 0, 15 ],
+      "count_decinc": [ 1, 15 ],
       "uniques": 10,
       "uniques_minmax": [ 1, 10 ],
       "uniques_decinc": [ 0, 10 ]
@@ -103,6 +103,15 @@
       "uniques": 3,
       "uniques_minmax": [ 1, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2023-07-11T00:00:00Z",
+      "count": 20,
+      "count_minmax": [ 20, 20 ],
+      "count_decinc": [ 0, 20 ],
+      "uniques": 12,
+      "uniques_minmax": [ 12, 12 ],
+      "uniques_decinc": [ 0, 12 ]
     }
   ]
 }
