@@ -1,10 +1,10 @@
 {
-  "count": 68,
-  "uniques": 34,
+  "count": 87,
+  "uniques": 44,
   "clones": [
     {
       "timestamp": "2023-06-27T00:00:00Z",
-      "count": 15,
+      "count": 14,
       "uniques": 10
     },
     {
@@ -56,6 +56,11 @@
       "timestamp": "2023-07-10T00:00:00Z",
       "count": 4,
       "uniques": 3
+    },
+    {
+      "timestamp": "2023-07-11T00:00:00Z",
+      "count": 20,
+      "uniques": 12
     }
   ]
 }
